--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ h2 {
     flex-wrap: wrap;
     width: 80%;
     margin-left: 5%;
-    margin-bottom: 20%;
+    margin-bottom: 100px;
 }
 
 .bios div {
