fix bottom margin on safari mobile

--- a/style.css
+++ b/style.css
@@ -121,7 +121,7 @@ footer {
 
 @media only screen and (max-width: 650px) {
     _::-webkit-full-page-media, _:future, :root .safari_only {
-        padding-bottom: 65px; //resize 
+        padding-bottom: 65px;
     }
 
     #hamburger-menu {
